🚀 Production ready: AI model photo generator
- Gemini 2.5 with image reference
- Perfect quality + /bin/zsh cost
- Tested on 35 products
- Web UI + test suite

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-# Fashn.ai API Configuration
-FASHN_API_KEY=your_api_key_here
+# Shopify Configuration
+SHOPIFY_STORE=your-store.myshopify.com
+SHOPIFY_TOKEN=shpat_your_admin_api_token_here
 
-# Optional: Output settings
-OUTPUT_DIR=./output
-OUTPUT_FORMAT=jpg
-OUTPUT_QUALITY=95
+# Gemini API (for AI model generation)
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# Optional: Processing settings
-BATCH_SIZE=5
-MAX_CONCURRENT=3
+# Optional: Replicate API (not needed with current implementation)
+# REPLICATE_API_TOKEN=r8_your_replicate_token_here
