--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,11 @@ SHOPIFY_STORE=your-store.myshopify.com
 SHOPIFY_TOKEN=shpat_your_admin_api_token_here
 
 # Gemini API (for AI model generation)
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=AIzaSyBYWiX_O6wWCh5JJYdU7pvIwkrNWGn3aOE
 
-# Optional: Replicate API (not needed with current implementation)
-# REPLICATE_API_TOKEN=r8_your_replicate_token_here
+# CJ Dropshipping API (for product sourcing)
+CJ_TOKEN=your_cj_dropshipping_api_token_here
+
+# Anthropic API (for Claude bio generation)
+ANTHROPIC_API_KEY=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
+
