--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
+google-genai>=0.2.0
+anthropic>=0.39.0
+httpx>=0.27.0
 requests>=2.31.0
 python-dotenv>=1.0.0
-pillow>=10.0.0
-aiohttp>=3.9.0
-tqdm>=4.66.0
-anthropic>=0.18.0
-httpx>=0.26.0
-google-genai>=0.3.0
-flask>=3.0.0
-
+Pillow>=10.0.0
