IMG GEN FIX , WITH BATCH PROCESSING

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,52 @@
-# Shopify Configuration
-SHOPIFY_STORE=your-store.myshopify.com
-SHOPIFY_TOKEN=shpat_your_admin_api_token_here
+# =============================================================================
+# Lumina Photo Enhancer - Environment Configuration
+# =============================================================================
 
-# Gemini API (for AI model generation)
-GEMINI_API_KEY=AIzaSyBYWiX_O6wWCh5JJYdU7pvIwkrNWGn3aOE
+# ============================================
+# SHOPIFY (optional - user provides via frontend)
+# ============================================
+# SHOPIFY_STORE=your-store.myshopify.com
+# SHOPIFY_TOKEN=shpat_xxxxxxxxxxxx
 
-# CJ Dropshipping API (for product sourcing)
-CJ_TOKEN=your_cj_dropshipping_api_token_here
+# ============================================
+# GEMINI API KEYS - Tiered Configuration
+# ============================================
+# Keys 1-5: Tier 1 (10 IPM each = 50 IPM total)
+# Keys 6-10: Free tier (2 IPM each = 10 IPM total)
+# TOTAL CAPACITY: 60 images per minute
+#
+# To get Tier 1: Enable billing on your Google Cloud Console project
 
-# Anthropic API (for Claude bio generation)
-ANTHROPIC_API_KEY=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
+# Tier 1 Keys (10 IPM each) - Enable billing for this rate
+GEMINI_API_KEY_1=your_tier1_key_here
+GEMINI_API_KEY_2=your_tier1_key_here
+GEMINI_API_KEY_3=your_tier1_key_here
+GEMINI_API_KEY_4=your_tier1_key_here
+GEMINI_API_KEY_5=your_tier1_key_here
 
+# Free Tier Keys (2 IPM each) - No billing required
+GEMINI_API_KEY_6=your_free_key_here
+GEMINI_API_KEY_7=your_free_key_here
+GEMINI_API_KEY_8=your_free_key_here
+GEMINI_API_KEY_9=your_free_key_here
+GEMINI_API_KEY_10=your_free_key_here
+
+# ============================================
+# PROCESSING ESTIMATES (with above config)
+# ============================================
+# 10 products (30 images): ~30 seconds
+# 50 products (150 images): ~2.5 minutes
+# 100 products (300 images): ~5 minutes
+# 500 products (1500 images): ~25 minutes
+# 1000 products (3000 images): ~50 minutes
+
+# ============================================
+# SERVER
+# ============================================
+PORT=8000
+FRONTEND_URL=https://your-app.vercel.app
+
+# ============================================
+# OPTIONAL
+# ============================================
+# LOG_LEVEL=INFO
